Thorough testing
Comprehensive unit testing and accompanying changes - alignment with released grammar, whitespace handling tweaks, fix with || operator